--- a/front/src/styles/Discover.css
+++ b/front/src/styles/Discover.css
@@ -72,7 +72,8 @@
 
 .discover-main-content {
   background: #323949;
-  overflow-y: auto;
+  /* overflow-y: auto; */
+  overflow: auto;
   border-radius: 18px;
   width: 100%;
   max-width: 900px;
@@ -81,6 +82,12 @@
   max-height: 500px;
   box-shadow: 0 6px 32px #00000030;
 }
+
+.discover-main-content::-webkit-scrollbar {
+  display:none;
+}
+
+
 
 .discover-container {
   display: grid;
